[project]
name = "gridappsd-sample-distributed-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrew R Fisher",email = "andrew.fisher@pnnl.gov"}
]
readme = "README.md"
requires-python = "<4.0,>=3.10"
dependencies = [
    "gridappsd-field-bus (>=2025.3.1a4,<2026.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
gridappsd-field-bus = {allow-prereleases = true}
